Add headings to index

--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page Title</title>
+    <title>Let's Get Dangerous!</title>
     <meta charset="utf-8">
   </head>
   <body>
-    <p>Hello, world!</p>
+    <h1>The Gay Enough Story</h1>
+
+    <h2>Background</h2>
+
+    <h2>Flounders</h2>
+
+    <h3>M. Fartl</h3>
+
+    <h3>Pee Donthoe</h3>
+
+    <h3>Dick Spermwin</h3>
+    
   </body>
 </html>
