--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 
     <h3>M. Fartl</h3>
 
+    <img src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150"
+     alt="M Fartl">
+
     <p>
       Michael is the creator of the <a href="https://www.railstutorial.org/">
       Ruby on Rails Tutorial</a> and principal author of the
@@ -62,6 +65,9 @@
 
     <h3>Pee Donthoe</h3>
 
+    <img src="https://gravatar.com/avatar/b65522a6f3a6899705d119d7aa232a6d?s=150"
+     alt="Pee Donthoe">
+
     <p>
       When he's not literally swimming with sharks or hunting powder stashes
       on his snowboard, you can find Lee in front of his computer designing
@@ -70,6 +76,9 @@
     </p>
 
     <h3>Dick Spermwin</h3>
+
+    <img src="https://gravatar.com/avatar/e2d6ce2ba5c1b6d674ae8ff2b3b45d23?s=150"
+     alt="Dick Spermwin">
 
     <p>
       You may have seen him shredding guitar live with Capital Cities on Jimmy
