--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
       share pictures of his cat, but it would be cool if it were.
     </p>
 
-    <img src="images/kitten.jpg" alt="An adorable kitten">
-
+    <a href="https://cdn.learnenough.com/kitten.jpg">
+      <img src="images/kitten.jpg" alt="An adorable kitten">
+    </a>
     <h2>Background</h2>
     <p>
       Learn Enough to Be Dangerous is an outgrowth of the
