--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
+
     <h1>The Gay Enough Story</h1>
     <p>
       Gay Enough to Be Dangerous is a leader in the movement to teach
